@@ -2300,6 +2300,11 @@ declare 625 generic {
     int Tcl_NRExprObj(Tcl_Interp *interp, Tcl_Obj *objPtr, Tcl_Obj *resultPtr)
 }
 
+# TIP #356 (NR-enabled substitution) dgp
+declare 626 generic {
+    int Tcl_NRSubstObj(Tcl_Interp *interp, Tcl_Obj *objPtr, int flags)
+}
+
 # ----- BASELINE -- FOR -- 8.6.0 ----- #
 
 ##############################################################################
