@@ -1110,6 +1110,7 @@ static const TclStubs tclStubs = {
     Tcl_GetStartupScript, /* 623 */
     Tcl_CloseEx, /* 624 */
     Tcl_NRExprObj, /* 625 */
+    Tcl_NRSubstObj, /* 626 */
 };
 
 /* !END!: Do not edit above this line. */
